--- a/src/components/tag.module.css
+++ b/src/components/tag.module.css
@@ -2,6 +2,6 @@
   padding: 0.2em 1em;
   background-color: #efefef;
   font-size: 0.8em;
-  border-radius: 2px;
+  border-radius: 0.5em;
   margin-right: 0.8em;
 }
