--- a/src/components/navbar.module.css
+++ b/src/components/navbar.module.css
@@ -1,20 +1,7 @@
 .navbar {
   display: flex;
-  flex-wrap: wrap;
-}
-
-.navbar a {
-  padding: 0 0.5em;
-  box-shadow: none;
-}
-
-.custom-link span {
-  transition: all 0.3s;
-  opacity: 0;
-  position: absolute;
-}
-
-.custom-link:hover span {
-  opacity: 1;
-  margin-left: -1.5em;
+  flex-direction: column;
+  justify-content: center;
+  border-bottom: 1px solid #3f51b5;
+  padding: 1em;
 }
