--- a/src/components/tag.module.css
+++ b/src/components/tag.module.css
@@ -1,7 +1,4 @@
 .tag {
-  padding: 0.2em 1em;
-  background-color: #efefef;
-  font-size: 0.8em;
-  border-radius: 0.5em;
-  margin-right: 0.8em;
+  margin-right: 0.5em;
+  text-decoration: underline;
 }
