--- a/src/components/wrapper.css
+++ b/src/components/wrapper.css
@@ -1,4 +1,6 @@
-.wrapper {
-  width: 800px;
-  margin: 0 auto;
+@media (min-width: 768px) {
+  .wrapper {
+    width: 800px;
+    margin: 0 auto;
+  }
 }
