Resolving okaidia locally

--- a/_includes/layouts/posts.njk
+++ b/_includes/layouts/posts.njk
@@ -9,10 +9,10 @@
     <meta name="description" content="{{ excerpt }}">
     <meta name="keywords" content="{{ metaKeywords }}">
 
-    <link href="https://unpkg.com/prismjs@1.20.0/themes/prism-okaidia.css" rel="stylesheet">
     {% set css %}
     {% include "reset.css" %}
     {% include "index.css" %}
+    {% include "okaidia.css" %}
     {% endset %}
 
     <style>
